extra fileHash work testing